--- a/style.css
+++ b/style.css
@@ -1,97 +1,101 @@
-/* 
-NO ACTION REQUIRED BY YOU
-
-Don't worry about this section.  These CSS styles are here to make the HTML document look cleaner, but are not part of the lesson.
-
-Just write your HTML however you want and these will automatically work.
-*/
+* {
+    margin: 0;
+    padding: 0;
+    font-family: nunito;
+}
 
 body {
-    background-color: #1D2326;
-    color: #BFA38A;
-    font-family: monospace;
-  }
-  
-  main {
+    padding: 0 18vw;
+}
+
+nav {
     display: flex;
-    flex-direction: row;
-  }
-  
-  img {
-    border: 1px solid white;
-    border-radius: 5px;
-    max-width: 350px;
-    width: 100%;
-  }
-  
-  p {
-    color: #8097A6;
-  }
-  
-  .attribution {
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    font-size: 0.8rem;
-    background-color: #8097A6;
+    padding: 2rem;
+}
+
+ul {
+    display: flex;
+    gap: none;
+    padding-left: auto;
+}
+
+ul li {
+    list-style: none;
+    padding: 1rem;
+
+}
+
+.icon {
     padding: 10px;
-    border-radius: 5px;
-    color: #1D2326;
-    box-shadow: 1px 2px 5px 1px rgba(255,255,255, 0.2);
-  }
-  
-  a {
-    color: white;
-  }
-  
-  a:hover {
-    opacity: 0.8;
-  }
-  
-  .content {
-    width: 65%;
-    padding-left: 30px;
-    padding-right: 20px;
-  }
-  
-  .content p {
-    max-width: 80%;
-  }
-  
-  .sidebar {
+}
+
+main {
+    padding: 5% 7%;
+}
+.box1{
     display: flex;
     flex-direction: column;
-    width: 30%;
-    padding-left: 30px;
-    padding-right: 30px;
-    border-left: 1px dotted #BFA38A;
-    height: 85vh;
-  }
-  
-  button {
-    width: 200px;
-    max-width: 100%;
+    align-items: center;
+}
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+h3 {
+    font-size: 25px;
+    text-align: center;
+    font-weight: lighter;
     margin-top: 10px;
-    margin-bottom: 10px;
-    height: 35px;
-    border: 1px solid #BFA38A;
-    background: transparent;
-    color: #BFA38A;
-    border-radius: 5px;
-  }
-  
-  button:hover {
-    cursor: pointer;
-    background-color: rgba(255,255,255,0.1)
-  }
-  
-  .reveal-btn {
-    border: none;
-    text-decoration: underline;
-    margin: 0;
-  }
-  
-  .reveal-btn:hover {
+}
+
+button {
+    background: #00b6d1;
     color: white;
-    background-color: transparent;
-  }
+    font-size: larger;
+    border-color: white;
+    border-radius: 7px;
+    padding: 10px;
+    margin-top: 10px;
+    width: fit-content;
+    
+}
+.box2{
+    margin-top: 2rem;
+}
+.top{
+    display: flex;
+
+}
+.content{
+display: grid;
+padding: 10px;
+margin-top: 2rem;
+grid-template-columns: 1fr 1fr 1fr;
+flex-wrap: wrap;
+
+}
+.card{
+background: #e3e2e2;
+align-content: center;
+height: 15vh;
+width: 15vw;
+padding: auto;
+font-weight: bolder;
+margin: 1rem;
+
+}
+.cardbtn{
+    background: #078a12;
+    color: white;
+    font-size: small;
+    position: relative;
+    left:  6rem;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+@media  screen and (max-width:500px) {
+    
+}
